// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audio test should render FinishedAudioCapsule 1`] = `
<div>
  <div
    class="d-flex justify-content-center align-items-center flex-column vh-100 bg-capsule"
  >
    <div>
      <div
        style="position: absolute; top: 150px; left: 20px; color: rgba(255, 255, 255, 0.271);"
      >
        <img
          alt="Some note"
          src="test-file-stub"
        />
      </div>
      <div
        style="position: absolute; bottom: 20px; left: 20px; color: rgba(255, 255, 255, 0.271);"
      >
        <img
          alt="Some note"
          src="test-file-stub"
          width="100"
        />
      </div>
      <div
        style="position: absolute; top: 200px; right: 20px; color: rgba(255, 255, 255, 0.271); transform: scaleX(-1);"
      >
        <img
          alt="Some note"
          src="test-file-stub"
          width="80"
        />
      </div>
      <div
        style="position: absolute; top: 500px; right: 20px; color: rgba(255, 255, 255, 0.271); transform: scaleX(-1);"
      >
        <img
          alt="Some note"
          src="test-file-stub"
          width="50"
        />
      </div>
      <div
        style="position: absolute; top: 400px; left: 20px; color: rgba(255, 255, 255, 0.271);"
      >
        <img
          alt="Some note"
          src="test-file-stub"
          width="50"
        />
      </div>
    </div>
    <div
      class="d-flex justify-content-center mb-5"
    >
      <h1
        id="done-title"
      >
        Fullført lydkapselen!
      </h1>
    </div>
    <div
      class="d-flex align-content-center flex-row justify-content-center gap-3  position-relative z-index-1"
      id="olaf-infront-div"
    >
      <div>
        <img
          alt="bilde av olaf på fullført side"
          height="200"
          id="olof-infront"
          src="test-file-stub"
        />
      </div>
      <div
        class="pe-4"
      >
        <div
          class="left-point"
        />
        <p
          id="finish-paragraph"
        >
          Godt jobbet!
          <br />
           Du har gjennomført en kapsel og fått poeng for det, og kanskje til og med lært noe nytt om Byåa!
        </p>
      </div>
    </div>
    <div>
      <p
        style="font-size: 1.7rem; font-weight: bold;"
      >
        Du har fått + 20 poeng
      </p>
    </div>
    <div
      class="d-flex flex-column"
    >
      <div>
        <button
          class="my-2"
          id="button-capsules-green"
        >
          Tilbake til kart
        </button>
      </div>
      <div>
        <button
          class="my-2"
          id="button-capsules-green"
        >
          Mine funn
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Audio test should render audio component 1`] = `
<div>
  <div
    class="position-relative d-flex justify-content-center align-items-center flex-column vh-100 bg-capsule media"
  >
    <div>
      <div
        style="position: absolute; top: 150px; left: 20px; color: rgba(255, 255, 255, 0.271);"
      >
        <img
          alt="Some note"
          src="test-file-stub"
        />
      </div>
      <div
        style="position: absolute; bottom: 20px; left: 20px; color: rgba(255, 255, 255, 0.271);"
      >
        <img
          alt="Some note"
          src="test-file-stub"
          width="100"
        />
      </div>
      <div
        style="position: absolute; top: 200px; right: 20px; color: rgba(255, 255, 255, 0.271); transform: scaleX(-1);"
      >
        <img
          alt="Some note"
          src="test-file-stub"
          width="80"
        />
      </div>
      <div
        style="position: absolute; top: 500px; right: 20px; color: rgba(255, 255, 255, 0.271); transform: scaleX(-1);"
      >
        <img
          alt="Some note"
          src="test-file-stub"
          width="50"
        />
      </div>
      <div
        style="position: absolute; top: 400px; left: 20px; color: rgba(255, 255, 255, 0.271);"
      >
        <img
          alt="Some note"
          src="test-file-stub"
          width="50"
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;
